src/share/components/DropDownBase/dropDownBase.scss
.dropdown-base {
  display: flex;
  align-items: center;
  gap: 10px;
  position: relative;
  min-width: 130px;
  font-size: 16px;

  &__display {
    flex-grow: 1;
    white-space: nowrap;

    &--empty {
      color: var(--cl-text-six);
    }
  }

  &__trigger {
    position: absolute;
    inset: 0;
    z-index: 0;
    background-color: transparent;
    border: none;
  }

  &__popper {
    background-color: var(--cl-bg);
    padding: 12px 14px;
    border-radius: 8px;
    border: 1px solid var(--cl-border);
  }

  &::after {
    content: '';
    background-image: url('@/assets/decor/arrow.svg');
    background-repeat: no-repeat;
    display: inline-block;
    width: 20px;
    height: 20px;
    transition: transform $animation;
  }

  &--expanded::after {
    transform: rotateZ(180deg);
  }
}

